tests/application/custom-certificate/application-duplicate-ingress-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-cert-duplicate
  annotations:
    argocd.argoproj.io/sync-options: "Prune=false"
spec:
  selector:
    matchLabels:
      app: custom-cert-duplicate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        argocd.argoproj.io/sync-options: "Prune=false"
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: custom-cert-duplicate
    spec:
      containers:
        - name: custom-cert-duplicate
          image: image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 150
            runAsUser: 150
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      imagePullSecrets:
        - name: github-auth
      securityContext:
        fsGroup: 150
        supplementalGroups:
          - 150
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: custom-cert-duplicate
      volumes:
        - emptyDir: {}
          name: tmp
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - custom-cert-duplicate
          matchLabelKeys:
            - pod-template-hash
        - maxSkew: 1
          topologyKey: "onprem.gke.io/failure-domain-name"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - custom-cert-duplicate
          matchLabelKeys:
            - pod-template-hash
---
apiVersion: v1
kind: Secret
metadata:
  name: some-cert
  namespace: istio-gateways
type: kubernetes.io/tls
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: custom-cert-duplicate-ingress-dc2b250f77a411ad
spec:
  selector:
    app: istio-ingress-external
  servers:
    - hosts:
        - test.kartverket.no
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - test.kartverket.no
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: some-cert
        mode: SIMPLE
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: custom-cert-duplicate-ingress
spec:
  exportTo:
    - .
    - istio-system
    - istio-gateways
  gateways:
    - custom-cert-duplicate-ingress-dc2b250f77a411ad
  hosts:
    - test.kartverket.no
  http:
    - match:
        - port: 80
      name: redirect-to-https
      redirect:
        redirectCode: 308
        scheme: https
    - name: default-app-route
      route:
        - destination:
            host: custom-cert-duplicate
            port:
              number: 8080
